Display precision of 3D cursor in View Properties (N) window is lower than tolerance of mirror editing #45319

Closed
opened 2015-07-05 10:20:38 +02:00 by Michael Soegtrop · 4 comments

System Information
Debian 8, nVidia GTX970, intel 4770K

Blender Version
2.74

Short description of error
Display precision of 3D cursor in View Properties (N) window is just 4 digits, which is lower than the tolerance of mirror editing.
Also the display precision of the 3D cursor is 1 digit less than the display precision of vertices in the N panel.

Exact steps for others to reproduce the error
In a mirror editing session I accidentially moved one vertex with mirror editing off. To fix this, I snapped the 3D cursor to the vertex, flipped the sign of the 3D cursor X coordinate in the view properties (N) panel and then snapped the mirrored vertex to the 3D corsor.

But this didn't work. Mirror editing still thinks that the two vertices are different. The reason is that the vertex coordinate is shown as -0.10377, while the 3D corsor coordinate is shown as -0.1038. When I invert the 3D cursor, it will be 0.1038 rather than 0.10377. So I guess the display resolution of the 3D cursor is below the tolerance limit of mirror editing.

I guess increasing the display precision of the 3D cursor by 1 digit (same as vertex display) shoudl help.

Best regards,

Michael

**System Information** Debian 8, nVidia GTX970, intel 4770K **Blender Version** 2.74 **Short description of error** Display precision of 3D cursor in View Properties (N) window is just 4 digits, which is lower than the tolerance of mirror editing. Also the display precision of the 3D cursor is 1 digit less than the display precision of vertices in the N panel. **Exact steps for others to reproduce the error** In a mirror editing session I accidentially moved one vertex with mirror editing off. To fix this, I snapped the 3D cursor to the vertex, flipped the sign of the 3D cursor X coordinate in the view properties (N) panel and then snapped the mirrored vertex to the 3D corsor. But this didn't work. Mirror editing still thinks that the two vertices are different. The reason is that the vertex coordinate is shown as -0.10377, while the 3D corsor coordinate is shown as -0.1038. When I invert the 3D cursor, it will be 0.1038 rather than 0.10377. So I guess the display resolution of the 3D cursor is below the tolerance limit of mirror editing. I guess increasing the display precision of the 3D cursor by 1 digit (same as vertex display) shoudl help. Best regards, Michael

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @msoegtrop-3

Added subscriber: @msoegtrop-3

This issue was referenced by 2b63ec2894

This issue was referenced by 2b63ec2894e6c91c8f0405a84d03f6fdd56f87c9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45319
No description provided.