Fix T45319: Set same precision for 3D cursor location as other locations (objects', vertices', etc.).